Cycles bake: Combined Type fails to bake Emission node #40270

Closed
opened 2014-05-20 02:23:50 +02:00 by marc dion · 6 comments

System Information
OSX 10.9.1,
2.7GHz i5
16GB
Radeon 6770M

Blender Version
Hash: 19b82be

Short description of error

Using bake type ->Combined seems to bake everything but Emission although baking using type ->Emit does work.

This makes baking models with glowing components difficult, an external editor is needed to combine two bakes into one. Since two materials can't be used instead of one, this also makes it necessary to create a mask as well for the external editing.

Exact steps for others to reproduce the error
the .blend should be ready to go. It has a cube with both a Diffuse shader and an Emit shader. There is a Checker Texture which is plugged into a Mix node Factor input.

emitBakeFails.blend

**System Information** OSX 10.9.1, 2.7GHz i5 16GB Radeon 6770M **Blender Version** Hash: 19b82be **Short description of error** Using bake type ->Combined seems to bake everything but Emission although baking using type ->Emit does work. This makes baking models with glowing components difficult, an external editor is needed to combine two bakes into one. Since two materials can't be used instead of one, this also makes it necessary to create a mask as well for the external editing. **Exact steps for others to reproduce the error** the .blend should be ready to go. It has a cube with both a Diffuse shader and an Emit shader. There is a Checker Texture which is plugged into a Mix node Factor input. [emitBakeFails.blend](https://archive.blender.org/developer/F89476/emitBakeFails.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Dalai Felinto was assigned by marc dion 2014-05-20 02:23:50 +02:00
Author

Added subscriber: @MarcClintDion

Added subscriber: @MarcClintDion

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by d7e4a79388

This issue was referenced by d7e4a793880796e7236f73df3f35abb045941aad

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d7e4a79388.

Closed by commit d7e4a79388.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40270
No description provided.