Cycles-Bake: fix T40270 Combined Type fails to bake Emission node

Main code and review by Brecht Van Lommel

Differential Revision: https://developer.blender.org/D543